crates/mokoto/tests/snapshots/parser__parse_patterns@Unary.mo-11.snap
---
source: crates/mokoto/tests/parser.rs
expression: output
---
{x = y}

---
OBJECT_PAT@0..7
  L_BRACE@0..1 "{"
  PATTERN_FIELD_PAT@1..6
    IDENT@1..2 "x"
    SPACE@2..3 " "
    EQUALS@3..4 "="
    SPACE@4..5 " "
    VAR_PAT@5..6
      IDENT@5..6 "y"
  R_BRACE@6..7 "}"
