crates/mokoto/tests/snapshots/parser__parse_patterns@Unary.mo-13.snap
---
source: crates/mokoto/tests/parser.rs
expression: output
---
#variant

---
VARIANT_PAT@0..8
  TAG@0..8
    HASH@0..1 "#"
    IDENT@1..8 "variant"
