crates/mokoto/tests/snapshots/parser__parse_patterns@Unary.mo-14.snap
---
source: crates/mokoto/tests/parser.rs
expression: output
---
#variant(_)

---
VARIANT_PAT@0..11
  TAG@0..8
    HASH@0..1 "#"
    IDENT@1..8 "variant"
  PAREN_PAT@8..11
    L_PAREN@8..9 "("
    WILDCARD_PAT@9..10
      UNDERSCORE@9..10 "_"
    R_PAREN@10..11 ")"
