crates/mokoto/tests/snapshots/parser__parse_patterns@Unary.mo-2.snap
---
source: crates/mokoto/tests/parser.rs
expression: output
---
x

---
VAR_PAT@0..1
  IDENT@0..1 "x"
