crates/mokoto/tests/snapshots/parser__parse_patterns@Unary.mo-3.snap
---
source: crates/mokoto/tests/parser.rs
expression: output
---
true

---
LITERAL_PAT@0..4
  LITERAL@0..4
    TRUE_KW@0..4 "true"
