crates/mokoto/tests/snapshots/parser__parse_patterns@Unary.mo-5.snap
---
source: crates/mokoto/tests/parser.rs
expression: output
---
()

---
TUPLE_PAT@0..2
  L_PAREN@0..1 "("
  R_PAREN@1..2 ")"
