crates/mokoto/tests/snapshots/parser__parse_patterns@Unary.mo.snap
---
source: crates/mokoto/tests/parser.rs
expression: output
---
_

---
WILDCARD_PAT@0..1
  UNDERSCORE@0..1 "_"
